new proj/src/objects/GE_ES_Project__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_Total_GE_portion_of_Project__c</fullName>
        <label>Total GE portion of Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Cap Ex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Op Ex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_XO_Org_ID__c</fullName>
        <formula>CASESAFEID($Organization.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_is_approved_Vendor__c</fullName>
        <label>GE is approved Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_win_Probability__c</fullName>
        <label>GE Go Probability</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_End_Cty__c</fullName>
        <formula>GE_OG_TM_Project_End_User__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_End_USt__c</fullName>
        <formula>GE_OG_TM_Project_End_User__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_Project_Comments__c</fullName>
        <label>Project Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Project_SAS__c</fullName>
        <label>Project SAS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_SS_Planned_Field_Decommissioning_Year__c</fullName>
        <label>Field Decommissioning Year</label>
        <picklist>
            <picklistValues>
                <fullName>1962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1963</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1964</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1968</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1969</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1979</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Tier1_Inst_Reg__c</fullName>
        <label>Tier 1 Install Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Tier2_Inst_Reg__c</fullName>
        <label>Tier 2 Install Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Tier_4_P_L__c</fullName>
        <label>Tier 4 P&amp;L</label>
        <picklist>
            <controllingField>GE_ES_Sub_P_L__c</controllingField>
            <picklistValues>
                <fullName>Gas Turbine Inlet Systems (GTIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Service Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions, Modifications &amp; Uprates (CM&amp;U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer Mount Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Field Services (Tx-Fs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geometry &amp; Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threatscan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Serial number of primary/Lead GE unit on the site in case there are multiple units associated to a given outage event on that site</inlineHelpText>
        <label>Installed Base</label>
        <referenceTo>GE_Installed_Base__c</referenceTo>
        <relationshipLabel>Project</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEGACY_ID__c</fullName>
        <description>This is to hold legacy id from source system eg. CMS</description>
        <externalId>true</externalId>
        <label>LEGACY_ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Comments__c</fullName>
        <label>Project Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Conceptual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-FEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEED Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEED Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEED Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMC Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMC Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Prequalification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won by M&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost by M&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially won by M&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Agreement Signed for MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTI Pre-FEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Pre-Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfered to ITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won by GE OC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Global_Industries1</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Account__c</columns>
        <columns>GE_HQ_Proj_Global_Ind__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>GE_ES_Tier_1_P_L__c</columns>
        <columns>GE_ES_Tier_2_P_L__c</columns>
        <columns>GE_HQ_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GE_ES_Project__c.Energy_HQ_Project</value>
        </filters>
        <filters>
            <field>GE_HQ_Proj_Global_Ind__c</field>
            <operation>equals</operation>
            <value>FOOD_BEV</value>
        </filters>
        <label>Global Industries F&amp;B</label>
        <language>en_US</language>
        <sharedTo>
            <group>GEHQAuthors</group>
            <group>GE_HQ_CMF_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Site_Outages_All_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GE_ES_Project__c.GE_HQ_Site_Outage</value>
        </filters>
        <label>Site Outages - All Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Site_Outages_My_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GE_ES_Project__c.GE_HQ_Site_Outage</value>
        </filters>
        <label>Site Outages - My Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TestProj</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_ES_Account__c</columns>
        <columns>GE_HQ_Proj_Global_Ind__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>test,delete</value>
        </filters>
        <label>TestProj</label>
        <language>en_US</language>
        <sharedTo>
            <group>GEHQAuthors</group>
            <group>GE_HQ_CMF_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>DP_Project</fullName>
        <active>true</active>
        <description>DP project</description>
        <label>DP Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energy_HQ_Project</fullName>
        <active>true</active>
        <label>Energy HQ Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_MCS_Project</fullName>
        <active>true</active>
        <description>M&amp;C global projects which involve multiple buying influences and requiring a Strategic Selling process typically including Capital Expenditure Projects (both Regional and Global)</description>
        <label>MCS Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_ES_PII_Project_RecordType</fullName>
        <active>true</active>
        <description>Project record type for OG PII</description>
        <label>PII Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_HQ_Site_Outage</fullName>
        <active>true</active>
        <label>Site Outage</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_Cross_P_L</fullName>
        <active>true</active>
        <description>This is the Cross Business Project usage</description>
        <label>Cross P&amp;L</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_Project</fullName>
        <active>true</active>
        <label>OG Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_SS_IB_customer_project</fullName>
        <active>true</active>
        <label>SS IB project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installed_Base_Event</fullName>
        <active>true</active>
        <description>Use this for Outages, End of Life or any Event triggering multiple opportunities.</description>
        <label>Installed Base Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <description>Use this for multiple P&amp;L projects or for projects requiring multiple opportunities.</description>
        <label>Project</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>GE_OG_SS_First_Oil_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_OG_SS_Waiting_Start_up__c= FALSE, RecordType.Name = &apos;SS IB project&apos; , ISBLANK(GE_OG_SS_First_Oil_Date__c) )</errorConditionFormula>
        <errorDisplayField>GE_OG_SS_First_Oil_Date__c</errorDisplayField>
        <errorMessage>Please enter &apos;First Oil Date&apos; because &apos;Waiting Start Up&apos; is not selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_SS_Platform_FPSO_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( GE_OG_SS_Platform_FPSO__c ),RecordType.Name =&apos;SS IB project&apos;,OR(ISPICKVAL( GE_OG_SS_Tied_back_to__c , &apos;Platform&apos;) ,(ISPICKVAL( GE_OG_SS_Tied_back_to__c , &apos;FPSO&apos;))) )</errorConditionFormula>
        <errorDisplayField>GE_OG_SS_Platform_FPSO__c</errorDisplayField>
        <errorMessage>Please provide Platform / FPSO details because &apos;Platform / FPSO&apos; is selected in &apos;Tied back to&apos;.</errorMessage>
    </validationRules>
</CustomObject>